kubernetes/coding-chain-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coding-chain-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coding-chain-worker
  template:
    metadata:
      labels:
        app: coding-chain-worker
    spec:
      containers:
      - name: coding-chain-worker
        image: codingchain.azurecr.io/coding-chain-worker:latest
        ports:
        - containerPort: 5004
        volumeMounts:
          - name: azure
            mountPath: /home/app_user/Templates
      volumes:
        - name: azure
          azureFile:
            secretName: worker-storage-secret
            shareName: worker
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: coding-chain-worker
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 5004
    targetPort: 80
    protocol: TCP
  selector:
    app: coding-chain-worker
