kubernetes/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coding-chain-ingress-controller
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: coding-chain-website
            port:
              number: 80
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: coding-chain-api
            port:
              number: 80
      - path: /message-broker/(.*)
        pathType: Prefix
        backend:
          service:
            name: coding-chain-rabbitmq
            port:
              number: 15672
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coding-chain-ingress-static
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name: coding-chain-website
            port:
              number: 80
        path: /static(/|$)(.*)
